fixed spacing

--- a/css/style_online_classes_blog.css
+++ b/css/style_online_classes_blog.css
@@ -106,7 +106,7 @@ input {
     padding: 15px 15px 15px 15px; /* Add some padding */
     background: transparent;
     outline: dashed;
-    margin-bottom: -20px; /* Add some space below the input */
+    margin-bottom: -50px; /* Add some space below the input */
 
 }
 i{
